--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -520,18 +520,6 @@
 	pages = {xi + 50 p},
 }
 
-@article{kormanEvaluationFrameworkAssessing2019,
-	title = {Evaluation framework for assessing potential {Pacific} {Salmon} {Commission} reference points for population status and associated allowable exploitation rates for {Strait} of {Georgia} and {Fraser} {River} {Coho} {Salmon} {Management} {Units}},
-	volume = {2019/001},
-	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40780223.pdf},
-	language = {en},
-	journal = {Canadian Science Advisory Secretariat Research Document},
-	author = {Korman, J and Sawada, J and Bradford, M J},
-	year = {2019},
-	pages = {ix + 81 p},
-	file = {Korman et al. - Evaluation framework for assessing potential Pacif.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\55RZH9X5\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf:application/pdf},
-}
-
 @techreport{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
 	title = {Conservation strategy for {Coho} {Salmon}  ({Oncorhynchus} kisutch), interior {Fraser} {River} populations},
 	institution = {Fisheries and Oceans Canada},
@@ -894,4 +882,64 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 	year = {2009},
 	pages = {4},
 	file = {Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\NKXLKWIE\\Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf:application/pdf},
+}
+
+@article{brennanShiftingHabitatMosaics2019,
+	title = {Shifting habitat mosaics and fish production across river basins},
+	volume = {364},
+	copyright = {Copyright © 2019 The Authors, some rights reserved; exclusive licensee American Association for the Advancement of Science. No claim to original U.S. Government Works. http://www.sciencemag.org.proxy.lib.sfu.ca/about/science-licenses-journal-article-reuseThis is an article distributed under the terms of the Science Journals Default License.},
+	issn = {0036-8075, 1095-9203},
+	url = {http://science.sciencemag.org/content/364/6442/783},
+	doi = {10.1126/science.aav4313},
+	abstract = {A portfolio of habitats
+To conserve species, we must conserve their habitat. This concept is well known, but the reality is much more complex than simply conserving a particular area. Habitats are dynamic and vary across both space and time. Such variation can help to facilitate long-term persistence of species by allowing local movement in search of the best conditions. Brennan et al. clearly demonstrate the benefit of the habitat mosaic to Pacific salmon by characterizing how both climate and population productivity vary over time and space in an Alaskan river system.
+Science, this issue p. 783
+Watersheds are complex mosaics of habitats whose conditions vary across space and time as landscape features filter overriding climate forcing, yet the extent to which the reliability of ecosystem services depends on these dynamics remains unknown. We quantified how shifting habitat mosaics are expressed across a range of spatial scales within a large, free-flowing river, and how they stabilize the production of Pacific salmon that support valuable fisheries. The strontium isotope records of ear stones (otoliths) show that the relative productivity of locations across the river network, as both natal- and juvenile-rearing habitat, varies widely among years and that this variability is expressed across a broad range of spatial scales, ultimately stabilizing the interannual production of fish at the scale of the entire basin.
+Mosaics of habitat increase resilience in salmon populations.
+Mosaics of habitat increase resilience in salmon populations.},
+	language = {en},
+	number = {6442},
+	urldate = {2020-08-18},
+	journal = {Science},
+	author = {Brennan, Sean R. and Schindler, Daniel E. and Cline, Timothy J. and Walsworth, Timothy E. and Buck, Greg and Fernandez, Diego P.},
+	month = may,
+	year = {2019},
+	pmid = {31123135},
+	note = {Publisher: American Association for the Advancement of Science
+Section: Report},
+	pages = {783--786},
+	file = {Snapshot:C\:\\Users\\WarkentinL\\Zotero\\storage\\NV6KVNN9\\783.html:text/html;Full Text PDF:C\:\\Users\\WarkentinL\\Zotero\\storage\\WK32JTQA\\Brennan et al. - 2019 - Shifting habitat mosaics and fish production acros.pdf:application/pdf},
+}
+
+@article{mooreConservationRisksPortfolio2021,
+	title = {Conservation risks and portfolio effects in mixed‐stock fisheries},
+	issn = {1467-2960, 1467-2979},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/faf.12567},
+	doi = {10.1111/faf.12567},
+	abstract = {Fish biodiversity sustains the resilience and productivity of fisheries, yet this biodiversity can be threatened by overharvest and depletion in mixed-­stock fisheries. Thus, the biodiversity that provides benefits may also make sustainable resource extraction more difficult, a key challenge in fisheries management. We simulated a mixed-­stock fishery to explore relationships between different dimensions of biodiversity and fishery performance relative to conservation and fishery objectives. Different dimensions of biodiversity (number of stocks, evenness, asynchrony among stocks, heterogeneity in stock productivity) exacerbated trade-­offs between fishery and conservation objectives. For example, fisheries targeting stock-­complexes with greater asynchrony, and to a lesser extent richness, had greater stability in harvest through time but also greater risks of overfishing weak stocks and reduced yield compared to less biodiverse stock-­complexes. These trade-­offs were ameliorated by increasing management control—­the capacity of fishery managers to harvest specific stocks. To explore these trade-­offs in real-­world fisheries, we contrasted the fishing and population status of individual stocks within three major mixed-­stock sockeye salmon (Oncorhynchus nerka, Salmonidae) fisheries—­Bristol Bay, Fraser River, and Skeena River. In general, the fisheries with lower management control had individual stocks that were more often being over-­or under-­fished, compared with those with higher management control, though variation among regions in biodiversity, scale of management, and magnitude of habitat alteration likely also contribute to these relationships. Collectively, our findings emphasize that there is a need to extract less or regulate better in order to conserve and benefit from biodiversity in fisheries and other natural resource management systems.},
+	language = {en},
+	urldate = {2021-05-13},
+	journal = {Fish and Fisheries},
+	author = {Moore, Jonathan W. and Connors, Brendan M. and Hodgson, Emma E.},
+	month = may,
+	year = {2021},
+	pages = {faf.12567},
+	file = {Moore et al. - 2021 - Conservation risks and portfolio effects in mixed‐.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\BWQCQVEQ\\Moore et al. - 2021 - Conservation risks and portfolio effects in mixed‐.pdf:application/pdf},
+}
+
+@article{davisEffectsVariabilitySynchrony2021,
+	title = {Effects of variability and synchrony in assessing contributions of individual streams to habitat portfolios of river basins},
+	volume = {124},
+	issn = {1470160X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1470160X21000923},
+	doi = {10.1016/j.ecolind.2021.107427},
+	abstract = {Despite growing recognition that complex population portfolios are important sources of ecosystem stability and resilience, the structure of such stock complexes is often not considered in monitoring schemes to inform environmental impact assessments. The use of “index” or “indicator” sites, and of short assessment windows, to make broad claims about the relative importance of specific habitats or populations within a portfolio, assume that regional populations are highly synchronous and that abundance is stable through time. Asynchrony among populations and changes in population productivity over time render these assumptions fundamentally flawed. We used 57 years of abundance data for sockeye salmon (Oncorhynchus nerka) spawning in a set of eight streams in the Wood River watershed, southwest Alaska, to demonstrate how natural patterns of variability affect the ability of fixed assessment windows to characterize the contribution of individual populations to the entire portfolio. Additionally, simulations were used to demonstrate how different levels of synchrony and autocor­ relation affect the ability of monitoring schemes to estimate the contributions of individual populations to a portfolio over the long-term. We found that fixed assessment windows were distinctly limited in their ability to characterize a population’s contribution to a portfolio over the long-tem. Asynchronous dynamics among pop­ ulations, and the presence of autocorrelation that creates slow changes in populations, weaken the ability to characterize a stream’s potential contribution to a portfolio from short-term assessments. These results suggest that the structure of population portfolios, and the presence of directional changes in productivity within in­ dividual populations, need to be taken into account when carrying out environmental risk assessments that aim to measure the contribution of an individual population or habitat to system wide dynamics. Typical risk as­ sessments that depend on short monitoring periods are likely to vastly underestimate the potential long-term value of any specific habitat, and the population it supports, as a component of a multi-population portfolio.},
+	language = {en},
+	urldate = {2021-02-22},
+	journal = {Ecological Indicators},
+	author = {Davis, Brooke M. and Schindler, Daniel E.},
+	month = may,
+	year = {2021},
+	pages = {107427},
+	file = {Davis and Schindler - 2021 - Effects of variability and synchrony in assessing .pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\7YVTLYFM\\Davis and Schindler - 2021 - Effects of variability and synchrony in assessing .pdf:application/pdf},
 }
