--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -73,33 +73,33 @@ Based on differences in threats and the coastal marine environment, we suggest t
 
 ### Previous assessments
 
-Two of the 3 CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because all component stocks had some level of enhancement over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
+Two of the 3 CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
 
 <!-- KH: It's interesting that the decision to assess WCVI-South as 'red' was based on hatchery straying; not low abundance of non-enhanced population components. This is something that wouldn't be captured in the multidimensional scanner tool, right?  Also interesting that WCVI-North was not assessed by WSP, but we do use it as part of the LRP work which we are designing to match with the WSP. I'm just flagging this for now as something I want to think more about / keep in mind as I read guidelines paper recommendations on enhancement  -->
 
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. A variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
 
-Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, $S_{REP}$, and $S_{MSY}$, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and $S_{REP}$ was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook (Appendix X, to be included). 
+Previous assessments have used biological benchmarks estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S\textsubscripts{REP}, and S\textsubscripts{MSY}, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
 
-<!-- K.H. I don't think the following paragraph fits into this section on "Previous Assessments" since it's something new that has been proposed for this LRP work.  I suggest moving it to the first part of the ## CONTEXT section, and framing it as a unique feature of this case study.  Alternatively, you could move it below to the "Estimation of CU Status' section??-->
+In November 2020, @cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot at Threatened, and West Vancouver Island-North as data deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. West Vancouver Island-North was designated data deficient because it contains only one indicator stock.
 
-Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach that preserved CU-scale diversity, while also considering inlet-scale diversity. Specifically, LRPs were developed to preserve inlet-scale diversity within CUs. However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicators stock without significant hatchery influence. The lack of indicators without significant hatchery influence for inlets Nitinat and San Juan is due to large-scale hatcheries and infrequent monitoring of sites with natural spawning.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat and San Juan, if they are developed. 
-
-<!--BC comment: I think the approach you took makes sense, but given it differs from the coho approach of modelling dynamics and assessing status at the CU instead of sub-population scale, highlights the importance of defining the most appropriate scale of diversity for deriving LRPs. All to say this should probably be one of the key considerations in your companion paper (and probably already is).   -->
 
 <!-- CH: move to Appendix: Because the stock-recruitment data for the meta-analysis used in @parken_2006 were not available, we relied on a similar data set used by @liermann_2010.  
-
 CW: I can write up the watershed model appendix, if that is not already done elsewhere? 
-
+CH: I'd love your help, but I think we won't get to it until Jan/Feb, so timing isn't good for you.
 -->
 
 
 ## DATA
 
+### Spatial scale
+
+Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach that preserved CU-scale diversity, while also considering inlet-scale diversity. Specifically, LRPs were developed to preserve inlet-scale diversity within CUs. However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicators stock without significant hatchery influence. The lack of indicators without significant hatchery influence for inlets Nitinat and San Juan is due to large-scale hatcheries and infrequent monitoring of sites with natural spawning.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat and San Juan, if they are developed. 
+
 ### Watershed Areas
 
-To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3rd order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage) (Appendix X, to be included). Only watershed areas for indicator stocks were included in the current analyses, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). <!--KH add: "As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams".--> In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as a base case <!-- KH: replace 'as a base case' with 'in this case study'?  Using base case suggests that there were other sensitivity cases in which you used non-indicator streams-->because of large uncertainties in abundances of non-indicator stocks.
+To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3rd order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage). Only watershed areas for indicator stocks were included in the current analyses, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams. In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as in this case study because of large uncertainties in abundances of non-indicator stocks.
 
 
 ```{r chinook-WA, warning=FALSE, echo=FALSE}
@@ -159,9 +159,11 @@ And, could then go on to state that multidimensional is preferred, but proportio
 <!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  -->
 
 
-## CU STATUS ESTIMATION
+## CU AND INLET STATUS ESTIMATION
 
-CU status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets. We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark $S_{gen}$ for all inlets. Here we present analyses and results for status on that single metric.
+
+
+Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets. We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark $S_{gen}$ for all inlets. Here we present analyses and results for status on that single metric.
 
 To estimate benchmarks, $S_{REP}$ values were first derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006 (Appendix X, to be included). <!--KH: suggest moving this first sentence about Srep to below these first three equations; it seems to make more sense to start this section with a definition of Sgen, which is the primary benchmark of interest for LRP development  --> The Wild Salmon Policy lower benchmark on abundances, $S_{gen}$, the spawner abundances required to achieve $S_{MSY}$ within one generation without fishing under equilibrium conditions, was derived by optimizing the Ricker equation with recruitment set to $S_{MSY}$.<!-- BC: Is it necessary to re-introduce these since they were already defined in the coho section? CW thinks it is a good idea to redefine to leave chapters as stand alone?
 -->
@@ -187,6 +189,8 @@ where,
 and $a$ is recruits-per-spawner at low productivity. Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006], (>7 recruits/spawner).  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. Bootstrapped confidence intervals in  $S_{gen}$ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling from normal distributions of $\log(S_{REP})$ and $\log(a)$, with standard deviations in $\log(S_{REP})$ derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks.
 
 Our approach to estimating $S_{gen}$ differed from that of @parkenHabitatbasedMethodsEstimate2006, because we derived productivity independently from the life-stage specific models, whereas @parkenHabitatbasedMethodsEstimate2006 estimated both $S_{MSY}$ and $S_{REP}$ from the watershed-area model thereby inferring mean estimates of productivity which were deemed unrealistically high for WCVI Chinook. 
+<!--CH moved from intro to this section. include??-->
+For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S\textsubscripts{REP} was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook.  <!--CH: Add when developed (Appendix X, also link to code in Appendix \@ref(github-appendix)). 
 
 <!--CH: update these benchmarks in table and plot with results with more boostrapped samples. Just move file over?-->
 
