changed formatting for subscripting for benchmark labels

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -6,7 +6,7 @@
 To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009a, we recommend that CU-level status consider multiple metrics, either integrated through expert-driven processes or the through the Pacific Salmon Status Scanner (Pestal et al. in prep.), where possible <!--CW: in theory, shouldn't the PSSS also be reviewed by experts? -->.  This approach allows for the assessment of status across a wide range of data availability; when data for a single metric is not available other metrics can be used to inform status. Although the Rapid Multidimensional Scanning Tool can provide provisional assessments under data limitations, uncertainties resulting from data limitations are not currently integrated into the provision of recommended status. Ongoing improvements to the tool will consider those uncertainties.  
 
 
-One metric within the Pacific Salmon Status Scanner is spawner abundances relative to <!--CH: "estimated" to distinguish for SoS's absolute or non-estimated benchmarks--> abundance-based benchmarks. Various types of benchmarks have been identified along this metric to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, the abundance resulting in recovery to S\textsubscripts{MSY} in one salmon generation under equilibrium conditions, S\textsubscripts{gen} is recommended by @holtEvaluationBenchmarksConservation2009. Where recruitment time-series are not available and productivity is assumed to be moderate or high and harvest rates moderate or low, specified percentiles of observed spawner time-series, (e.g., 25th) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks across the Pacific region to predict reference points for Chinook stocks without recruitment data.
+One metric within the Pacific Salmon Status Scanner is spawner abundances relative to <!--CH: "estimated" to distinguish for SoS's absolute or non-estimated benchmarks--> abundance-based benchmarks. Various types of benchmarks have been identified along this metric to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ is recommended by @holtEvaluationBenchmarksConservation2009. Where recruitment time-series are not available and productivity is assumed to be moderate or high and harvest rates moderate or low, specified percentiles of observed spawner time-series, (e.g., 25th) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks across the Pacific region to predict reference points for Chinook stocks without recruitment data.
 
 In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; peacockMetricsSamplingDesigns2012]. Although benchmarks along metrics of distribution have not been identified for WSP assessment, for Interior Fraser River Coho Salmon, short and long-term recovery targets along a metric of spawning distribution among sub-populations was identified [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and forms a basis for management of this SMU.
 
