--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -80,7 +80,7 @@ Two of the 3 CUs in this SMU, West Vancouver Island-South and West Vancouver Isl
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. A variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
 
-Previous assessments have used biological benchmarks estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S\textsubscripts{REP}, and S\textsubscripts{MSY}, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
+Previous assessments of Chinook Salmon stocks, including WCVI, have used 'habitat-based' biological benchmarks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S\textsubscripts{REP}, and S\textsubscripts{MSY}, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010]. Lack of rigorous recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
 
 In November 2020, @cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot at Threatened, and West Vancouver Island-North as data deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. West Vancouver Island-North was designated data deficient because it contains only one indicator stock.
 
@@ -127,7 +127,9 @@ csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for in
 ### Spawner Abundances
 Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled. In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. 
 
-
+<!--CH to do: add ave PNI values to this plot for each panel, where available
+e.g., for code to do this see 3rd and 4th plots here: https://stackoverflow.com/questions/11889625/annotating-text-on-individual-facet-in-ggplot2
+-->
 ```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks with Proportionate Natural Index (PNI) values <= 0.5; light blue time-series are indicator stocks with PNI < 0.5, i.e., are highly enhanced.",  warning=FALSE, echo=FALSE, fig.align="center"}
 
 knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
@@ -135,37 +137,26 @@ knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 
 
 ### Proportionate Natural Influence, PNI
-<!--KH: Might be good to start with a quick definition of PNI and the original reference? -->
-PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced <!-- and excluded from being used as an indicator stock in our analyses--> if average PNI values over available time-series were < 0.5, representing integrated-hatchery stocks where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available; coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery. There is no evidence of the original natural spawners in this system, so it was excluded from our analyses. <!-- KH: What is meant by 'no evidence of the original natural spawners'? --> Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program.
 
-<!-- CH comment: Do we need to (can we) include time-series of PNI values in an appendix?
-CW: I think it would be better to include the values in a table in the main chapter, if that is possible. We already have 5 appendixes (counting the one on the watershed area model, to be included) -->
+Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery, was excluded from our analyses. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program.
 
-<!-- CH add from Guidelines paper 'Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).'-->
 
-<!-- KH comment: Suggestion to add new section here to be consistent with Coho and Chum chapters: - 
-## CU Status Estimation
+Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks.
 
-You could also make this section consistent with Coho and Chum by defining the two methods of CU (inlet) status determination considered for Chinook:
+<!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
 
-1) Mutlidimensional rapid scanning tool
-2) Abundance relative to Sgen
-
-And, could then go on to state that multidimensional is preferred, but proportion above Sgen used for comparison.
-
+CH: my initial thinking would be remove time-periods where PNI is very high from analyses. This is similar to approach of FR sockeye, where they removed historical periods of high hatchery enhancement in SR time-series. However, I think we could probably leave this as a recommendation that should come from SEP. For IFR, I think starting the data in 1998 removes most/all of those problems?
 -->
-
-<!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  -->
 
 
 ## CU AND INLET STATUS ESTIMATION
+<!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
+Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets. We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S\textsubscripts{gen} for all inlets. Here we present analyses and results for status on that single metric, though it also represents multidimensional status in this case.
 
-Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets. We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark $S_{gen}$ for all inlets. Here we present analyses and results for status on that single metric.
 
-To estimate benchmarks, $S_{REP}$ values were first derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006 (Appendix X, to be included). <!--KH: suggest moving this first sentence about Srep to below these first three equations; it seems to make more sense to start this section with a definition of Sgen, which is the primary benchmark of interest for LRP development  --> The Wild Salmon Policy lower benchmark on abundances, $S_{gen}$, the spawner abundances required to achieve $S_{MSY}$ within one generation without fishing under equilibrium conditions, was derived by optimizing the Ricker equation with recruitment set to $S_{MSY}$.<!-- BC: Is it necessary to re-introduce these since they were already defined in the coho section? CW thinks it is a good idea to redefine to leave chapters as stand alone?
--->
+The Wild Salmon Policy lower benchmark on abundances, S\textsubscripts{gen}, the spawner abundances required to achieve S\textsubscripts{MSY} within one generation without fishing under equilibrium conditions, was derived by optimizing the Ricker equation with recruitment set to S\textsubscripts{MSY}.
 
 \begin{equation}
   S_{MSY} = a * S_{gen}* e^{-b * S_{gen}}
@@ -185,13 +176,15 @@ where,
    (\#eq:SMSY)
 \end{equation}
 
-and $a$ is recruits-per-spawner at low productivity. Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006], (>7 recruits/spawner).  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. Bootstrapped confidence intervals in  $S_{gen}$ (Equation \@ref(eq:Sgen)) were estimated by repeated sampling from normal distributions of $\log(S_{REP})$ and $\log(a)$, with standard deviations in $\log(S_{REP})$ derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks.
+and $a$ is recruits-per-spawner at low productivity. Ricker $a$ values were approximated for WCVI Chinook from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion. Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment (W. Luedke pers. comm. DFO South Coast Stock Assessment). Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006], (>7 recruits/spawner).  From the life-stage model, mean $\log(a)$ was estimated at ~ 1 (~$a$=2.72 recruits/spawner), with standard errors (1.96 SDs) +/- 0.5 ($a$ ranging from 1.6 to 4.5), representing relatively large uncertainty in productivity. 
 
-Our approach to estimating $S_{gen}$ differed from that of @parkenHabitatbasedMethodsEstimate2006, because we derived productivity independently from the life-stage specific models, whereas @parkenHabitatbasedMethodsEstimate2006 estimated both $S_{MSY}$ and $S_{REP}$ from the watershed-area model thereby inferring mean estimates of productivity which were deemed unrealistically high for WCVI Chinook. 
-<!--CH moved from intro to this section. include??-->
-For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S\textsubscripts{REP} was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook.  <!--CH: Add when developed (Appendix X, also link to code in Appendix \@ref(github-appendix)). 
+Maximum likelihood estimates of S\textsubscripts{REP} values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish @liermannUsingAccessibleWatershed2010. <!--CH: Add when developed (Appendix \@ref(), link to code in Appendix \@ref(github-appendix)). -->
 
-<!--CH: update these benchmarks in table and plot with results with more boostrapped samples. Just move file over?-->
+Our approach to estimating S\textsubscripts{gen} differed from that of @parkenHabitatbasedMethodsEstimate2006, because we derived productivity independently from the life-stage specific models, whereas @parkenHabitatbasedMethodsEstimate2006 estimated both S\textsubscripts{MSY} and S\textsubscripts{REP} from the watershed-area model thereby inferring mean estimates of productivity which were deemed unrealistically high for WCVI Chinook. 
+
+
+Bootstrapped confidence intervals in  S\textsubscripts{gen} (Equation \@ref(eq:Sgen)) were estimated by repeated sampling from normal distributions of S\textsubscripts{REP} and $\log(a)$, with standard deviations in log(S\textsubscripts{REP}) derived from the watershed-area model. This method does not account for covariance between productivity and capacity typically found in stock-recruitment relationships, and will overestimate uncertainty in derived benchmarks. <!--CH Q to Catarina: Is this bootstrapping method okay? It feels a little ad hoc, but was supported by the TWG--> 
+
 
 ```{r chinook-benchmarks}
 inlets <- c("Barkley", "Clayoquot", "Kyuquot", "Nootka/Esperanza", "Quatsino")
@@ -234,16 +227,16 @@ knitr::include_graphics("figure/chinook-inlet-timeseries.png")
 ## LRP ESTIMATION: PROPORTION OF CUS
 
 ### Methods
-The LRP on the proportion of CUs was identified as all 3 CUs containing inlets with current statuses exclusively above their lower benchmarks. For this SMU, serious harm was identified as any one inlet within each of the 3 CUs dropping below its lower benchmark or in the red zone under the Wild Salmon Policy. Because inlets are nested within CUs, this LRP accounts for the distribution of spawning within CUs. Status of inlets within CUs was identified in two ways: spawner abundances relative to  $S_{gen}$ and multi-dimensional status assessments developed by the DFO's State of the Salmon program (S. Grant. pers. comm. DFO Science; Figure \@ref(fig:decision-tree)).
+The LRP on the proportion of CUs was identified as all 3 CUs containing inlets with current statuses exclusively above their lower benchmarks. For this SMU, serious harm was identified as any one inlet within each of the 3 CUs dropping below its lower benchmark or in the red zone under the Wild Salmon Policy. Because inlets are nested within CUs, this LRP accounts for the distribution of spawning within CUs. Status of inlets within CUs was identified in two ways: spawner abundances relative to S\textsubscripts{gen} and multidimensional status assessments developed by the DFO's State of the Salmon program (S. Grant. pers. comm. DFO Science; Figure \@ref(fig:decision-tree)).
 <!--CH revised this section to put more emphasis on multidimensional approach-->
 
 <!--KH: May be worth noting that you are applying the multidimensional scanning tool on the inlet scale, not the CU scale as it was intended.  This will not matter for your case study because you only use relative abundance thresholds, but, for a case with  absolute abundance, changing the scale may make some of the absolute threshold benchmarks (e.g., <1500 fish = red) not applicable.-->
 
 ### Results
-In the most recent year with data, 2020, 4 of 5 inlets are above their abundance-based lower benchmark, $S_{gen}$ (Figure \@ref(fig:chinook-InletTimeSeries)). Therefore, 2 of 3 CUs contain inlets with current statuses exclusively above their lower benchmarks. One CU, Southern Vancouver Island, contains an inlet, Clayoquot, with status that has been consistently below its lower benchmark throughout the available time-series. Therefore this SMU falls below the LRP of 3/3 CUs.
+In the most recent year with data, 2020, 4 of 5 inlets are above their abundance-based lower benchmark, S\textsubscripts{gen} (Figure \@ref(fig:chinook-InletTimeSeries)). Therefore, 2 of 3 CUs contain inlets with current statuses exclusively above their lower benchmarks. One CU, Southern Vancouver Island, contains an inlet, Clayoquot, with status that has been consistently below its lower benchmark throughout the available time-series. Therefore this SMU falls below the LRP of 3/3 CUs.
 
 
-Using the multidimensional approach, the status was the same as for the abundance-based lower benchmarks. For this SMU, time-series of abundances for WCVI Chinook are not absolute (only indicator stocks are monitored consistently) and  relative-abundance benchmarks can be identified ($S_{gen}$ and $S_{MSY}$), and so according to the multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks as above. Therefore, similar to above, 2 of 3 CUs met the criteria of containing inlets with status above the red zone under the multi-dimensional approach, falling below the LRP of 3/3 CUs.
+Using the multidimensional approach, the status was the same as for the abundance-based lower benchmarks. For this SMU, time-series of abundances for WCVI Chinook are not absolute (only indicator stocks are monitored consistently) and  relative-abundance benchmarks can be identified (S\textsubscripts{gen} and S\textsubscripts{MSY}), and so according to the multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks as above. Therefore, similar to above, 2 of 3 CUs met the criteria of containing inlets with status above the red zone under the multi-dimensional approach, falling below the LRP of 3/3 CUs.
 
 
 
@@ -609,7 +602,7 @@ knitr::include_graphics("figure/chinook-ERs-ProjLRPCurve-ALLp.png")
 
 Given uncertainty in current and anticipated productivity, projection-based LRPs were evaluated under a range of productivities from 75% - 150% of base case estimates. Scenarios with lower productivity (<0.75x current estimates) resulted in a large proportion of trajectories with productivity below replacement, for which LRPs could not be estimated. 
 
-Projection-based LRPs tended to increase under low productivity and vice versa, a trend that was expected due to the inverse relationship between productivity and inlet-specific $S_{gen}$ values [@holtCautionsUsingPercentilebased2015]. At low productivity, $S_{gen}$ tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection-based LRPs as productivity changes (Figure \@ref(fig:chinook-projLRPsAlpha)). Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5.<!--What is p=0.5? 50% probabilitythat all CUs will be above benchmark? Maybe good to redefine here?-->The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated (though estimation may be possible with more Monte Carlo trials). More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
+Projection-based LRPs tended to increase under low productivity and vice versa, a trend that was expected due to the inverse relationship between productivity and inlet-specific S\textsubscripts{gen} values [@holtCautionsUsingPercentilebased2015]. At low productivity, S\textsubscripts{gen} tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection-based LRPs as productivity changes (Figure \@ref(fig:chinook-projLRPsAlpha)). Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5.<!--What is p=0.5? 50% probabilitythat all CUs will be above benchmark? Maybe good to redefine here?-->The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated (though estimation may be possible with more Monte Carlo trials). More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
    
 
 <!--  BC:Consider having panels share y-axis --> 
@@ -624,7 +617,7 @@ knitr::include_graphics("figure/chinook-Alphas-ProjLRPCurve-ALLp.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We evaluated the status of WCVI Chinook using LRPs estimated using the proportion of CUs with all inlets above $S_{gen}$ and projection-based LRPs, as well as the previously published WSP integrated assessment (status in 2014 only, @dfoIntegratedBiologicalStatus2016) (Figure \@ref(fig:chinook-retro)). All methods indicate this SMU being below its LRP for years where data are available.
+We evaluated the status of WCVI Chinook using LRPs estimated using the proportion of CUs with all inlets above S\textsubscripts{gen} and projection-based LRPs, as well as the previously published WSP integrated assessment (status in 2014 only, @dfoIntegratedBiologicalStatus2016) (Figure \@ref(fig:chinook-retro)). All methods indicate this SMU being below its LRP for years where data are available.
    
 ```{r chinook-retro, echo=FALSE, fig.cap="Historical evaluation of status using available methods for estimating LRPs. Red bars indicate status below LRP; grey x's indicate status not available", out.width = '80%'}
 
