--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -6,7 +6,7 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 ### Data Availability and Spatial Scale (Step 1)
 
-The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine scale data on stocks <!-- KH: use 'steams' instead of more ambiguous 'stocks'??--> or spawning sites to the CU level. 
+The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances. <!--CW: Maybe cite more data examples: time-series of spawner abundances, Spawner-recruit time-series, juvenile survival information, PNI estimates for the CUs, and previously published biological benchmarks-->  This step generally includes aggregating fine scale data on stocks <!-- KH: use 'steams' instead of more ambiguous 'stocks'?? CW: or could just remove and say aggregating fine scale data--> or spawning sites to the CU level. 
 
 In some cases, spatial scales within CUs <!--KH: replace 'spatial scales within CUs' with 'a finer spatial scale than CU' --> (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
 
@@ -30,7 +30,7 @@ As a side note: what is meant by provisionally included?
   
 ### Assessing Data Deficiency (Step 2)
 
-Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years <!--KH: does 'less than half of available years' mean 'less than half the years in the last three generations'?  - I assume this is what's meant bc if it was a 50 year time series, with the last 10 years missing, you would meet the 'half of available years' threshold, but not have much for short-term trend analysis  -->or are of low quality representing only presence/absence, <!--KH: start new sentence: These criteria for trend detection are --> similar to criteria described in @brown2020SummaryAbundance2020 <!--and (?) --> applied to spawning sites of Chinook Salmon in Southern BC. 
+Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years <!--KH: does 'less than half of available years' mean 'less than half the years in the last three generations'?  - I assume this is what's meant bc if it was a 50 year time series, with the last 10 years missing, you would meet the 'half of available years' threshold, but not have much for short-term trend analysis  -->or are of low quality representing only presence/absence, <!--KH: start new sentence: These criteria for trend detection are --> similar to criteria described in @brown2020SummaryAbundance2020 <!--and (?) --> applied to spawning sites of Chinook Salmon in Southern BC. 
 
 
 CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
