--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -26,7 +26,7 @@ We applied candidate methods for LRPs developed in Section \@ref(est-methods) to
 
 ## Interior Fraser River Coho
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S\textsubscript{gen} was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
 
 We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion-based and logistic regression-based LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection-based LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.43 (Figure \@ref(density-cor-plot)).<!--CH: Kendra, I averaged values from a ppt of yours with a cor plot; probably best to check this against data used in the density plot below-->
 
@@ -51,11 +51,12 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1
 ```
 
 
-We characterized CU status in three ways, using: (1) the Rapid Multidimensional Scanning Tool, (2) CU-level abundances relative to $S_{gen}$ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Rapid Multidimensional Scanning Tool are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009a], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Rapid Multidimensional Scanning Tool. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S\textsubscript{gen} as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In the first and second approaches, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Pacific Salmon Status Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, <!--CW: they are not required but there is a history of using aggregate abundance metrics as recovery targets, Kendra mentioned it in the discussion of that chapter --> we provide logistic regression-based and projection-based LRPs for demonstration purposes.
 
 For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to underlying assumption with a retrospective analysis by removing years of data an re-estimating CU-level benchmarks, CU statuses, SMU-level LRPs, as well as sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
 
-We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Rapid Multidimensional Scanning Tool vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that the inclusion of additional CUs occasionally results in more pessimistic status relative to the LRP, but not more optimistic status, possibly creating disincentives to monitoring. This asymmetry is a consequence of the LRP being triggered by any single CU having red status. <!--CH: Kendra, is there anything more we should highlight here?-->
+We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution). <!--CW: remove: or the addition of more years or CUs of data.--> <!-- CW suggested text: We investigated the impacts of having longer time series and more CUs with data on logistic regression-based LRPs , we found that, as expected, the shorter time series lead to more uncertainty in LRP estimates. We also found that there was considerable instability in status estimates when two CUs were removed from the available data.-->
+ However, we note that the inclusion of additional CUs occasionally results in more pessimistic status relative to the LRP, but not more optimistic status, possibly creating disincentives to monitoring. This asymmetry is a consequence of the LRP being triggered by any single CU having red status. <!--CH: Kendra, is there anything more we should highlight here?--> <!--CW this past two sentences are true for the proportion-based LRP, but I am not too sure if the same is true for the aggregate abundance LRP, I think we saw more positive status when CUs were removed but I don't think that behavior is generalizable -->
 
 For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection-based LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression-based LRPs.
 
@@ -63,15 +64,15 @@ For this case study, we further demonstrated the approach of averaging over stru
 
 The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002]. Hatchery enhancement is an important component of many of these stocks and only indicator stocks without significant enhancement (PNI>0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(density-cor-plot)).
 
-Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). Similar to the Interior Fraser River Coho case study analysis that considered spawner abundances to subpopulations within CUs, we considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these units.
+Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). Similar to the Interior Fraser River Coho case study analysis that considered spawner abundances to subpopulations within CUs <!--CW: I suggest removing reference to coho, as we did use complete CU data for the SR estimates (correct?). Brendan already asked why did you choose to split chinook but combine coho, mentioning it here could also lead to another off topic discussion-->, we considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these units.
 
 Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
 
-Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, $S_{REP}$, and $S_{MSY}$, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and $S_{REP}$ was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook. 
+Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S\textsubscript{REP}, and S\textsubscript{MSY}, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S\textsubscript{REP} was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook. 
 
-We characterized CU status in two ways for this case study, using: (1) the Rapid Multidimensional Scanning Tool, (2) CU-level abundances relative to $S_{gen}$ derived from watershed-area model estimates of $S_{REP}$ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportion-based LRPs and projection-based LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the red zone, so it was not possible to identify logistic regression-based LRPs.  Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide projection-based LRPs for demonstration purposes. We implemented sensitivity analyses on projection-based LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S\textsubscript{gen} derived from watershed-area model estimates of S\textsubscript{REP} and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportion-based LRPs and projection-based LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the red zone, so it was not possible to identify logistic regression-based LRPs.  Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide projection-based LRPs for demonstration purposes. We implemented sensitivity analyses on projection-based LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
 
-In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based were also highly sensitivity to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in relatively large changes in LRPs estimates. 
+In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based were also highly sensitivity to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in <!--remove:relatively--> large changes in LRPs estimates. 
 
 
 ## Inner South Coast Chum (excluding Fraser)
@@ -80,8 +81,8 @@ The 'Inside South Coast Chum - Non-Fraser' (ISC-NF Chum) SMU includes seven CUs 
 
 The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions, and recruitment are too unreliable for quantitative inclusion in stock assessments for this SMU.  Instead,  benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed hatchery-dominated systems (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72). Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment.
 
-For this case study, we consider two approaches for characterizing CU status: (1) the Rapid Multidimensional Scanning Tool and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
+For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
 
 
-We found that assessments based on the Rapid Multidimensional Scanning Tool gave similar results as the single-metric on spawner abundances relative to percentile-based benchmarks, though there was some variability among years. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in the same or more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
+We found that assessments based on the Pacific Salmon Status Scanner gave similar results as the single-metric on spawner abundances relative to percentile-based benchmarks, though there was some variability among years. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in the same or more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
 
